--- a/textproc/groonga/Makefile
+++ b/textproc/groonga/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD: Makefile,v 1.60 2016/09/11 16:06:53 taca Exp $
 #
 
-DISTNAME=	groonga-6.1.3
+DISTNAME=	groonga-6.1.4
 CATEGORIES=	textproc
 MASTER_SITES=	http://packages.groonga.org/source/groonga/
 
@@ -9,8 +9,6 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://groonga.org/
 COMMENT=	Fulltext search engine and column store
 LICENSE=	gnu-lgpl-v2.1
-
-DEPENDS+=	onigmo>=6.0.0:../../textproc/onigmo
 
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
@@ -21,6 +19,7 @@ USE_TOOLS+=	gmake pkg-config
 
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASEDIR}
 CONFIGURE_ARGS+=	--localstatedir=${VARBASE}
+CONFIGURE_ARGS+=	--with-onigmo=system
 
 PKGCONFIG_OVERRIDE+=	groonga.pc.in
 
@@ -42,4 +41,5 @@ CHECK_INTERPRETER_SKIP+=	share/groonga/examples/*
 
 .include "../../devel/editline/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
+.include "../../textproc/onigmo/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
