--- a/graphics/rabbit/Makefile
+++ b/graphics/rabbit/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD: Makefile,v 1.55 2016/10/09 16:02:19 taca Exp $
 #
 
-DISTNAME=	rabbit-2.1.9
+DISTNAME=	rabbit-2.2.0
 CATEGORIES=	graphics ruby
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,6 +11,7 @@ LICENSE=	gnu-gpl-v2 # or later
 
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gtk>=0.90.3:../../x11/ruby-gnome2-gtk
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gio>=1.1.4:../../devel/ruby-gnome2-gio
+#DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gdk_pixbuf>=3.0.9:../../graphics/ruby-gnome2-gdk_pixbuf
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-rsvg-[0-9]*:../../graphics/ruby-gnome2-rsvg
 DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-poppler-[0-9]*:../../print/ruby-gnome2-poppler
 DEPENDS+=	${RUBY_PKGPREFIX}-hikidoc-[0-9]*:../../textproc/ruby-hikidoc
@@ -21,7 +22,6 @@ DEPENDS+=	${RUBY_PKGPREFIX}-coderay>=1.0.0:../../textproc/ruby-coderay
 DEPENDS+=	${RUBY_PKGPREFIX}-kramdown-[0-9]*:../../textproc/ruby-kramdown
 DEPENDS+=	${RUBY_PKGPREFIX}-gettext>=3.0.1:../../devel/ruby-gettext
 DEPENDS+=	${RUBY_PKGPREFIX}-faraday-[0-9]*:../../www/ruby-faraday
-#DEPENDS+=	${RUBY_PKGPREFIX}-gnome2-gstreamer-[0-9]*:../../multimedia/ruby-gnome2-gstreamer
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
