--- a/inputmethod/ibus-m17n/Makefile
+++ b/inputmethod/ibus-m17n/Makefile
@@ -1,10 +1,9 @@
 # $NetBSD: Makefile,v 1.41 2018/04/16 14:34:44 wiz Exp $
 #
 
-DISTNAME=	ibus-m17n-1.3.4
-PKGREVISION=	24
+DISTNAME=	ibus-m17n-1.4.0
 CATEGORIES=	inputmethod
-MASTER_SITES=	http://ibus.googlecode.com/files/
+MASTER_SITES=	https://github.com/ibus/ibus-m17n/releases/download/${PKGVERSION_NOREV}/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/ibus/ibus/wiki
@@ -16,7 +15,10 @@ USE_LIBTOOL=		yes
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		pkg-config msgfmt gmake
 
+GETTEXT_TOOLS_REQD=	0.19.7
+
 .include "../../devel/m17n-lib/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../inputmethod/ibus/buildlink3.mk"
+.include "../../devel/glib2/schemas.mk"
 .include "../../mk/bsd.pkg.mk"
