--- a/lang/perl5/Makefile
+++ b/lang/perl5/Makefile
@@ -49,7 +49,7 @@ CONFLICTS+=	p5-Locale-Maketext-Simple<0.21.01	# 0.21_01
 CONFLICTS+=	p5-MIME-Base64<3.15
 CONFLICTS+=	p5-Math-Complex<1.59.01			# 5901
 CONFLICTS+=	p5-Memoize<1.03.01
-CONFLICTS+=	p5-Module-CoreList<5.20180622
+CONFLICTS+=	p5-Module-CoreList<5.20181129.28	# 5.20181129_28
 CONFLICTS+=	p5-Module-Load<0.32
 CONFLICTS+=	p5-NEXT<0.67.01				# 1.67_01
 CONFLICTS+=	p5-Parse-CPAN-Meta<2.150010
