--- a/devel/libgcroots/Makefile
+++ b/devel/libgcroots/Makefile
@@ -1,9 +1,9 @@
 # $NetBSD: Makefile,v 1.7 2017/08/16 21:22:11 wiz Exp $
 #
 
-DISTNAME=	libgcroots-0.2.3
+DISTNAME=	libgcroots-0.3.1
 CATEGORIES=	devel
-MASTER_SITES=	http://sigscheme.googlecode.com/files/
+MASTER_SITES=	https://github.com/uim/libgcroots/releases/download/${PKGVERSION_NOREV}/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://code.google.com/archive/p/sigscheme/wikis/libgcroots.wiki
@@ -15,9 +15,5 @@ USE_LIBTOOL=	yes
 USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE+=	gcroots.pc.in
-
-# This directory is used for c++ interface, but not build by default.
-post-install:
-	rmdir ${DESTDIR}${PREFIX}/include/libgcroots
 
 .include "../../mk/bsd.pkg.mk"
